[package]
name = "kdtree-na"
version = "0.6.1-alpha.0"
authors = ["Rui Hu <code@mrhooray.com>", "Dylan Staatz <dylanstaatz@gmail.com>"]
description = "K-dimensional tree in Rust for fast geospatial indexing and nearest neighbors lookup with nalgebra types"
keywords = ["tree", "nearest", "neighbor", "search", "geo"]
readme = "README.md"
repository = "https://github.com/dstaatz/kdtree-na"
license = "MIT OR Apache-2.0"
edition = "2018"

[dev-dependencies]
rand = "0.3.9"
nalgebra = { version = "0.29", features = ["rand"] }

[dependencies]
num-traits = "0.2"
nalgebra = "0.29"

[dependencies.serde]
version = "1.0"
optional = true

[features]
serialize = ["serde", "serde/derive", "nalgebra/serde-serialize"]
